[gd_scene load_steps=13 format=3 uid="uid://ds7dhatpsorxn"]

[ext_resource type="Texture2D" uid="uid://2wgf1axqtcjh" path="res://mystic_woods_art/sprites/characters/skeleton.png" id="1_6pwvt"]
[ext_resource type="Script" path="res://skeleton.gd" id="1_atoim"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ex831"]
size = Vector2(9, 3)

[sub_resource type="Animation" id="Animation_nnbrk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_45m6v"]
resource_name = "attack"
length = 1.6
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 0.9, 0.91, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [12, 15, 16, 0, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.81, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_rdu4l"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [24, 28]
}

[sub_resource type="Animation" id="Animation_gwok3"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 5]
}

[sub_resource type="Animation" id="Animation_y75vo"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ur6d0"]
_data = {
"RESET": SubResource("Animation_nnbrk"),
"attack": SubResource("Animation_45m6v"),
"death": SubResource("Animation_rdu4l"),
"idle": SubResource("Animation_gwok3"),
"run": SubResource("Animation_y75vo")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_f6bcp"]
radius = 80.0062

[sub_resource type="CircleShape2D" id="CircleShape2D_nkcuf"]
radius = 21.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_22nxq"]
height = 32.0

[node name="Skeleton" type="CharacterBody2D" groups=["minimap_objects"]]
collision_layer = 8
collision_mask = 13
motion_mode = 1
script = ExtResource("1_atoim")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -22)
texture = ExtResource("1_6pwvt")
hframes = 6
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 8
position = Vector2(-0.5, -1.5)
shape = SubResource("RectangleShape2D_ex831")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ur6d0")
}

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -17.0
horizontal_alignment = 1

[node name="Detect" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_f6bcp")

[node name="Attack" type="Area2D" parent="."]
visible = false
position = Vector2(0, 1)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_nkcuf")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(14, -11)
shape = SubResource("CapsuleShape2D_22nxq")
disabled = true

[connection signal="body_entered" from="Detect" to="." method="_on_detect_body_entered"]
[connection signal="body_exited" from="Detect" to="." method="_on_detect_body_exited"]
[connection signal="body_entered" from="Attack" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="Attack" to="." method="_on_attack_body_exited"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
